packages/adapters/graylog/src/generated/graylog-parser.js
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Query: peg$parseQuery };
  var peg$startRuleFunction = peg$parseQuery;

  var peg$c0 = "or";
  var peg$c1 = "and";
  var peg$c2 = "not";
  var peg$c3 = "(";
  var peg$c4 = ")";
  var peg$c5 = ":";
  var peg$c6 = "=";
  var peg$c7 = "_exists_";
  var peg$c8 = "NOT";
  var peg$c9 = "to";
  var peg$c10 = "AND";
  var peg$c11 = ">=";
  var peg$c12 = "<=";
  var peg$c13 = ">";
  var peg$c14 = "<";
  var peg$c15 = "[";
  var peg$c16 = "{";
  var peg$c17 = "]";
  var peg$c18 = "}";
  var peg$c19 = "*";
  var peg$c20 = "\"";
  var peg$c21 = "-";
  var peg$c22 = ".";
  var peg$c23 = "T";
  var peg$c24 = "Z";
  var peg$c25 = "now";
  var peg$c26 = "s";
  var peg$c27 = "m";
  var peg$c28 = "h";
  var peg$c29 = "d";
  var peg$c30 = "w";
  var peg$c31 = "~";
  var peg$c32 = "'";
  var peg$c33 = "/";
  var peg$c34 = "?";
  var peg$c35 = "\\\"";
  var peg$c36 = "\\'";
  var peg$c37 = "\\/";
  var peg$c38 = "\\";
  var peg$c39 = "&";
  var peg$c40 = "|";
  var peg$c41 = "+";
  var peg$c42 = "!";
  var peg$c43 = "^";
  var peg$c44 = " AND ";
  var peg$c45 = " OR ";
  var peg$c46 = " NOT ";

  var peg$r0 = /^[ T]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[+\-]/;
  var peg$r3 = /^[a-zA-Z_]/;
  var peg$r4 = /^[a-zA-Z0-9_.\-]/;
  var peg$r5 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("OR", true);
  var peg$e1 = peg$literalExpectation("AND", true);
  var peg$e2 = peg$literalExpectation("NOT", true);
  var peg$e3 = peg$literalExpectation("(", false);
  var peg$e4 = peg$literalExpectation(")", false);
  var peg$e5 = peg$literalExpectation(":", false);
  var peg$e6 = peg$literalExpectation("=", false);
  var peg$e7 = peg$literalExpectation("_exists_", false);
  var peg$e8 = peg$literalExpectation("NOT", false);
  var peg$e9 = peg$literalExpectation("TO", true);
  var peg$e10 = peg$literalExpectation("AND", false);
  var peg$e11 = peg$literalExpectation(">=", false);
  var peg$e12 = peg$literalExpectation("<=", false);
  var peg$e13 = peg$literalExpectation(">", false);
  var peg$e14 = peg$literalExpectation("<", false);
  var peg$e15 = peg$literalExpectation("[", false);
  var peg$e16 = peg$literalExpectation("{", false);
  var peg$e17 = peg$literalExpectation("]", false);
  var peg$e18 = peg$literalExpectation("}", false);
  var peg$e19 = peg$literalExpectation("*", false);
  var peg$e20 = peg$literalExpectation("\"", false);
  var peg$e21 = peg$classExpectation([" ", "T"], false, false);
  var peg$e22 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e23 = peg$literalExpectation("-", false);
  var peg$e24 = peg$literalExpectation(".", false);
  var peg$e25 = peg$literalExpectation("T", false);
  var peg$e26 = peg$literalExpectation("Z", false);
  var peg$e27 = peg$classExpectation(["+", "-"], false, false);
  var peg$e28 = peg$literalExpectation("now", false);
  var peg$e29 = peg$literalExpectation("s", false);
  var peg$e30 = peg$literalExpectation("m", false);
  var peg$e31 = peg$literalExpectation("h", false);
  var peg$e32 = peg$literalExpectation("d", false);
  var peg$e33 = peg$literalExpectation("w", false);
  var peg$e34 = peg$literalExpectation("~", false);
  var peg$e35 = peg$literalExpectation("'", false);
  var peg$e36 = peg$literalExpectation("/", false);
  var peg$e37 = peg$literalExpectation("?", false);
  var peg$e38 = peg$anyExpectation();
  var peg$e39 = peg$literalExpectation("\\\"", false);
  var peg$e40 = peg$literalExpectation("\\'", false);
  var peg$e41 = peg$literalExpectation("\\/", false);
  var peg$e42 = peg$literalExpectation("\\", false);
  var peg$e43 = peg$literalExpectation("&", false);
  var peg$e44 = peg$literalExpectation("|", false);
  var peg$e45 = peg$literalExpectation("+", false);
  var peg$e46 = peg$literalExpectation("!", false);
  var peg$e47 = peg$literalExpectation("^", false);
  var peg$e48 = peg$literalExpectation(" AND ", false);
  var peg$e49 = peg$literalExpectation(" OR ", false);
  var peg$e50 = peg$literalExpectation(" NOT ", false);
  var peg$e51 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e52 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", ".", "-"], false, false);
  var peg$e53 = peg$otherExpectation("whitespace");
  var peg$e54 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(query) {
      return {
        type: 'query',
        expression: query
      };
    };
  var peg$f1 = function() {
      // Empty query - matches all
      return {
        type: 'query',
        expression: { type: 'match_all' }
      };
    };
  var peg$f2 = function(first, rest) {
      if (rest.length === 0) return first;
      
      // Check for case-sensitive OR
      rest.forEach(r => {
        if (r[1] !== 'OR') {
          error(`Boolean operator must be uppercase: use 'OR' instead of '${r[1]}'`);
        }
      });
      
      return {
        type: 'boolean',
        operator: 'OR',
        clauses: [first, ...rest.map(r => r[3])]
      };
    };
  var peg$f3 = function(first, rest) {
      if (rest.length === 0) return first;
      
      // Check for case-sensitive AND
      rest.forEach(r => {
        if (r[1] !== 'AND') {
          error(`Boolean operator must be uppercase: use 'AND' instead of '${r[1]}'`);
        }
      });
      
      return {
        type: 'boolean',
        operator: 'AND',
        clauses: [first, ...rest.map(r => r[3])]
      };
    };
  var peg$f4 = function(first, rest) {
      if (rest.length === 0) return first;
      
      // Multiple terms without explicit operators = implicit OR
      return {
        type: 'boolean',
        operator: 'OR',
        clauses: [first, ...rest.map(r => r[2])]
      };
    };
  var peg$f5 = function(not, expr) {
      // Check for case-sensitive NOT
      if (not !== 'NOT') {
        error(`Boolean operator must be uppercase: use 'NOT' instead of '${not}'`);
      }
      return {
        type: 'not',
        expression: expr
      };
    };
  var peg$f6 = function(expr) {
      return expr;
    };
  var peg$f7 = function(field, value) {
      return {
        type: 'field',
        field: field,
        value: value
      };
    };
  var peg$f8 = function(expr) {
      return {
        type: 'group',
        expression: expr
      };
    };
  var peg$f9 = function(field) {
      return {
        type: 'exists',
        field: field
      };
    };
  var peg$f10 = function(field) {
      return {
        type: 'not',
        expression: {
          type: 'exists',
          field: field
        }
      };
    };
  var peg$f11 = function() {
      return "_exists_";
    };
  var peg$f12 = function(field, range) {
      return {
        type: 'field',
        field: field,
        value: range
      };
    };
  var peg$f13 = function(open, from, to, close) {
      return {
        type: 'range',
        from: from,
        to: to,
        inclusive_from: open === '[',
        inclusive_to: close === ']'
      };
    };
  var peg$f14 = function(op, value) {
      return {
        type: 'unbounded_range',
        operator: op,
        value: value
      };
    };
  var peg$f15 = function(first, second) {
      return {
        type: 'compound_range',
        conditions: [first, second]
      };
    };
  var peg$f16 = function() { return '>='; };
  var peg$f17 = function() { return '<='; };
  var peg$f18 = function() { return '>'; };
  var peg$f19 = function() { return '<'; };
  var peg$f20 = function(open) { return open; };
  var peg$f21 = function(open) { return open; };
  var peg$f22 = function(close) { return close; };
  var peg$f23 = function(close) { return close; };
  var peg$f24 = function() { return { type: 'wildcard', value: '*' }; };
  var peg$f25 = function(datetime) {
      return {
        type: 'datetime',
        value: datetime
      };
    };
  var peg$f26 = function(date, time) {
      return date + ' ' + time;
    };
  var peg$f27 = function(date) {
      return date;
    };
  var peg$f28 = function(year, month, day) {
      return year.join('') + '-' + month.join('') + '-' + day.join('');
    };
  var peg$f29 = function(hour, minute, second, ms) {
      return hour.join('') + ':' + minute.join('') + ':' + second.join('') + (ms ? ms.join('') : '');
    };
  var peg$f30 = function(year, month, day, hour, minute, second, ms, tz) {
      return year.join('') + '-' + month.join('') + '-' + day.join('') + 
             'T' + hour.join('') + ':' + minute.join('') + ':' + second.join('') + 
             (ms ? ms.join('') : '') + (tz || '');
    };
  var peg$f31 = function() { return 'Z'; };
  var peg$f32 = function(sign, hour, minute) {
      return sign + hour.join('') + ':' + minute.join('');
    };
  var peg$f33 = function(offset) {
      return {
        type: 'relative_time',
        base: 'now',
        offset: offset
      };
    };
  var peg$f34 = function(op, num, unit) {
      return {
        operator: op,
        value: parseInt(num),
        unit: unit
      };
    };
  var peg$f35 = function() { return 's'; };
  var peg$f36 = function() { return 'm'; };
  var peg$f37 = function() { return 'h'; };
  var peg$f38 = function() { return 'd'; };
  var peg$f39 = function() { return 'w'; };
  var peg$f40 = function(chars, fuzzy) {
      const term = chars.join('');
      
      // Check if it's a fuzzy search
      if (fuzzy) {
        return {
          type: 'fuzzy',
          term: term,
          distance: fuzzy[1] ? parseInt(fuzzy[1]) : 2
        };
      }
      
      // Check if it contains wildcards
      if (term.includes('*') || term.includes('?')) {
        return {
          type: 'wildcard',
          pattern: term
        };
      }
      
      // Regular term - just return the value directly for exact match
      return term;
    };
  var peg$f41 = function(term, fuzzy) {
      // Check if it's a fuzzy search
      if (fuzzy) {
        return {
          type: 'fuzzy',
          term: term,
          distance: fuzzy[1] ? parseInt(fuzzy[1]) : 2
        };
      }
      
      // Check if it contains wildcards
      if (term.includes('*') || term.includes('?')) {
        return {
          type: 'wildcard',
          pattern: term
        };
      }
      
      // Regular term
      return {
        type: 'term',
        value: term
      };
    };
  var peg$f42 = function(chars, proximity) {
      if (proximity) {
        return {
          type: 'proximity',
          phrase: chars.join(''),
          distance: proximity
        };
      }
      return {
        type: 'phrase',
        value: chars.join('')
      };
    };
  var peg$f43 = function(chars) {
      return {
        type: 'phrase',
        value: chars.join('')
      };
    };
  var peg$f44 = function(distance) {
      return parseInt(distance);
    };
  var peg$f45 = function(pattern) {
      return {
        type: 'regex',
        pattern: pattern.join('')
      };
    };
  var peg$f46 = function(chars) {
      return chars.join('');
    };
  var peg$f47 = function(chars) {
      return chars.join('');
    };
  var peg$f48 = function() { return '*'; };
  var peg$f49 = function() { return '?'; };
  var peg$f50 = function(char) {
      return char;
    };
  var peg$f51 = function(char) {
      return char;
    };
  var peg$f52 = function() { return '*'; };
  var peg$f53 = function() { return '?'; };
  var peg$f54 = function() { return '"'; };
  var peg$f55 = function(char) { return char; };
  var peg$f56 = function() { return "'"; };
  var peg$f57 = function(char) { return char; };
  var peg$f58 = function() { return '/'; };
  var peg$f59 = function(char) { return char; };
  var peg$f60 = function(char) {
      return char;
    };
  var peg$f61 = function(first, rest) {
      return first + rest.join('');
    };
  var peg$f62 = function(digits, decimals) {
      return parseFloat(digits + '.' + decimals.join(''));
    };
  var peg$f63 = function(digits) {
      return digits.join('');
    };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseQuery() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseOrExpression();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse__();
      peg$savedPos = s0;
      s1 = peg$f1();
      s0 = s1;
    }

    return s0;
  }

  function peg$parseOrExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseAndExpression();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse__();
      if (input.substr(peg$currPos, 2).toLowerCase() === peg$c0) {
        s5 = input.substr(peg$currPos, 2);
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse__();
        s7 = peg$parseAndExpression();
        if (s7 !== peg$FAILED) {
          s4 = [s4, s5, s6, s7];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (input.substr(peg$currPos, 2).toLowerCase() === peg$c0) {
          s5 = input.substr(peg$currPos, 2);
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse__();
          s7 = peg$parseAndExpression();
          if (s7 !== peg$FAILED) {
            s4 = [s4, s5, s6, s7];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAndExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
